# COVID19-Tracker-Rust

./: Cargo.toml  README.md
src/: covid_details.rs  main.rs
ui/: app-window.slint
