[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
rust_decimal = "1.35.0"
chrono = "0.4.41"

[build-dependencies]
slint-build = "1.12.1"
